feat: Move to Java 14 to simplify query text blocks